Adding Nabenik flavor.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#f9b305</color>
-    <color name="colorPrimaryDark">#c18400</color>
+    <color name="colorPrimary">#fdd835</color>
+    <color name="colorPrimaryDark">#c6a700</color>
     <color name="colorAccent">#b0bec5</color>
+    <color name="colorBackground">#ffffff</color>
+    <color name="colorSeparator">#cbcbcb</color>
     <color name="backgroundLogin">#ffffff</color>
+    <color name="backgroundSplash">#ffffff</color>
 </resources>
